feat: 출석 확인 기능 추가